--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,6 +1,6 @@
 .list-container {
   overflow: auto;
-  height: 100%;
+  height: calc(100% - 52px);
 }
 
 app-list-item {
